# RL4LMs

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
rl4lms/algorithms/a2c/: a2c.py
rl4lms/algorithms/ppo/: ppo.py
rl4lms/algorithms/trpo/: trpo.py
rl4lms/envs/common/: base_env.py
rl4lms/envs/text_generation/: alg_wrappers.py  env.py  evaluation_utils.py  hf_generation_utils.py  metric.py  reward.py  training_utils.py  warm_start.py
rl4lms/envs/text_generation/policy/: base_policy.py
scripts/training/: train_text_generation.py
